Added Train file

--- a/Notebooks/Feature Mapping/Bayesian_Network_Logistic-Regression-Hyperparameter-Search.ipynb
+++ b/Notebooks/Feature Mapping/Bayesian_Network_Logistic-Regression-Hyperparameter-Search.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,13 @@
     "from sklearn import svm\n",
     "from XLB import *\n",
     "\n",
-    "from pomegranate import *\n",
+    "import pandas as pd \n",
+    "\n",
+    "from sklearn import datasets\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torchbnn as bnn\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -60,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +75,18 @@
      "text": [
       "(750, 69) (750,)\n",
       "(750, 69) (750,)\n",
-      "[[0.         0.         1.         ... 0.2919568  0.17662811 0.17661486]\n",
-      " [1.         1.         1.         ... 0.23618019 0.17934551 0.1793323 ]\n",
-      " [1.         0.         1.         ... 0.25145659 0.18423683 0.1842237 ]\n",
-      " ...\n",
-      " [1.         0.         1.         ... 0.3711809  0.20217166 0.20215882]\n",
-      " [1.         0.         0.         ... 0.34489129 0.20543254 0.20541975]\n",
-      " [1.         0.         0.         ... 0.30154896 0.20814994 0.2081372 ]]\n"
+      "[1.         1.         1.         0.52108434 0.48107515 0.72424866\n",
+      " 0.43380062 0.52308697 0.52817024 0.12486843 0.54195949 0.3611159\n",
+      " 0.52129297 0.27518074 0.46655604 0.6557498  0.30235053 0.32643465\n",
+      " 0.02736892 0.55518878 0.59222226 0.09831908 0.54163232 0.36127085\n",
+      " 0.52209661 0.27414381 0.46502436 0.6529655  0.30123643 0.72383199\n",
+      " 0.65381368 0.4523244  0.13277089 0.18917784 0.09148758 0.50564972\n",
+      " 0.77948653 0.68639304 0.09099316 0.01541819 0.71095813 0.7826087\n",
+      " 0.08241345 0.77948653 0.6864991  0.0910664  0.0145165  0.70895515\n",
+      " 0.77009661 0.67647059 0.00203913 0.00562726 0.01349145 0.01986507\n",
+      " 0.0123881  0.01746491 0.0123881  0.01746491 0.00204347 0.00454104\n",
+      " 0.00204347 0.00454104 0.00284424 0.25971479 0.3756087  0.20311342\n",
+      " 0.23618019 0.17934551 0.1793323 ]\n"
      ]
     }
    ],
@@ -84,7 +95,7 @@
     "x_train, y_train = extract_data(\"FinalTrainingSet.csv\")\n",
     "x_val, y_val = extract_data(\"Validation Set.csv\")\n",
     "\n",
-    "# scale data values\n",
+    "#scale data values\n",
     "scaler = MinMaxScaler()\n",
     "scaler.fit(x_train)\n",
     "x_train = scaler.transform(x_train)\n",
@@ -118,7 +129,10 @@
     "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
     "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
     "print(x_os.shape,y_os.shape)\n",
-    "print(x_train)"
+    "\n",
+    "pd.cut(x_train[1], bins=3, labels=np.arange(3), right=False)\n",
+    "\n",
+    "print(x_train[1])\n"
    ]
   },
   {
@@ -3531,16 +3545,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 98,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "324\n",
-      "['Tempo', 'Arousal', 'IsMajor', 'Compactness Overall Average', 'Compactness Overall Standard Deviation', 'Derivative of Compactness Overall Average', 'Derivative of Compactness Overall Standard Deviation', 'Derivative of Fraction Of Low Energy Windows Overall Average', 'Derivative of Fraction Of Low Energy Windows Overall Standard Deviation', 'Derivative of Root Mean Square Overall Standard Deviation', 'Derivative of Running Mean of Compactness Overall Standard Deviation', 'Derivative of Running Mean of Fraction Of Low Energy Windows Overall Average', 'Derivative of Running Mean of Fraction Of Low Energy Windows Overall Standard Deviation', 'Derivative of Running Mean of Root Mean Square Overall Average', 'Derivative of Running Mean of Spectral Flux Overall Average', 'Derivative of Running Mean of Spectral Rolloff Point Overall Standard Deviation', 'Derivative of Running Mean of Spectral Variability Overall Average', 'Derivative of Spectral Flux Overall Average', 'Derivative of Spectral Flux Overall Standard Deviation', 'Derivative of Spectral Rolloff Point Overall Average', 'Derivative of Spectral Rolloff Point Overall Standard Deviation', 'Derivative of Spectral Variability Overall Standard Deviation', 'Derivative of Standard Deviation of Compactness Overall Standard Deviation', 'Derivative of Standard Deviation of Fraction Of Low Energy Windows Overall Average', 'Derivative of Standard Deviation of Fraction Of Low Energy Windows Overall Standard Deviation', 'Derivative of Standard Deviation of Root Mean Square Overall Average', 'Derivative of Standard Deviation of Spectral Flux Overall Average', 'Derivative of Standard Deviation of Spectral Rolloff Point Overall Standard Deviation', 'Derivative of Standard Deviation of Spectral Variability Overall Average', 'Derivative of Zero Crossings Overall Average', 'Derivative of Zero Crossings Overall Standard Deviation', 'FFT Bin Frequency Labels Overall Average', 'Fraction Of Low Energy Windows Overall Average', 'Fraction Of Low Energy Windows Overall Standard Deviation', 'Power Spectrum Overall Average', 'Root Mean Square Overall Average', 'Running Mean of Compactness Overall Average', 'Running Mean of Compactness Overall Standard Deviation', 'Running Mean of Fraction Of Low Energy Windows Overall Average', 'Running Mean of Spectral Centroid Overall Standard Deviation', 'Running Mean of Spectral Flux Overall Standard Deviation', 'Spectral Flux Overall Standard Deviation', 'Spectral Rolloff Point Overall Average', 'Standard Deviation of Compactness Overall Average', 'Standard Deviation of Compactness Overall Standard Deviation', 'Standard Deviation of Fraction Of Low Energy Windows Overall Average', 'Standard Deviation of Spectral Centroid Overall Standard Deviation', 'Standard Deviation of Spectral Flux Overall Standard Deviation', 'Standard Deviation of Zero Crossings Overall Standard Deviation', 'Beat Histogram Overall Average', 'Derivative of Method of Moments Overall Average', 'Derivative of Method of Moments Overall Standard Deviation', 'Derivative of MFCC Overall Average', 'Derivative of MFCC Overall Standard Deviation', 'Derivative of Partial Based Spectral Centroid Overall Average', 'Derivative of Partial Based Spectral Centroid Overall Standard Deviation', 'Derivative of Partial Based Spectral Flux Overall Average', 'Derivative of Partial Based Spectral Flux Overall Standard Deviation', 'Derivative of Peak Based Spectral Smoothness Overall Average', 'Derivative of Peak Based Spectral Smoothness Overall Standard Deviation', 'Derivative of Relative Difference Function Overall Average', 'Derivative of Relative Difference Function Overall Standard Deviation', 'Derivative of Running Mean of Beat Sum Overall Average', 'Derivative of Running Mean of LPC Overall Average', 'Derivative of Running Mean of LPC Overall Standard Deviation', 'Derivative of Running Mean of Method of Moments Overall Average', 'Derivative of Running Mean of MFCC Overall Average', 'Derivative of Running Mean of Partial Based Spectral Centroid Overall Average', 'Derivative of Running Mean of Partial Based Spectral Flux Overall Average']\n",
-      "69\n"
+      "1621.0\n",
+      "[ 0.33741314  0.60657686  0.71480978  0.47330295  0.21257742  0.6449548\n",
+      "  0.61182237  0.30096333  0.85859544 -0.05333225  0.5956395   0.37063465\n",
+      "  0.36692835  0.66925017  0.27221983  0.45246712  0.63240411  0.56092781\n",
+      "  0.7620949   0.44792223  0.52534567  0.5830353   0.41820921  0.73312602\n",
+      "  0.32611867  0.41453809  0.66816824  0.62955468  0.75273619  0.44493308\n",
+      "  0.31820762  0.32211917  0.44319093  0.4394329   0.37189628  0.66032943\n",
+      "  0.35077774  0.90158684  0.58402718  0.26235183  0.48415193  0.43066761\n",
+      "  0.42202205  0.55102731  0.51295958  0.36931441  0.34667099  0.40344103\n",
+      "  0.74013186  0.64750982  0.38177631  0.37945337  0.5746249   0.44470142\n",
+      "  0.63981171  0.39975176  0.37020125  0.55047234  0.45033547  0.12725791\n",
+      "  0.55837614  0.53965764  0.55229155  0.40259384  0.18695841  0.40063514\n",
+      "  0.4738006   0.34106302  0.5912928 ]\n"
      ]
     }
    ],
@@ -3556,17 +3582,40 @@
     "features.remove(\"Row Labels\")\n",
     "features.remove(\"Theme\")\n",
     "features.remove(\"Theme(Numbered)\")\n",
-    "print(len(features))\n",
+    "# print(len(features))\n",
     "#Retained features after selection\n",
     "selected_feats = feat_sel_2.get_support(True)\n",
+    "\n",
+    "print(x_train[0, 5])\n",
     "\n",
     "for ind, ft in sorted(enumerate(features), reverse=True): \n",
     "    if ind not in selected_feats:\n",
     "        del features[ind]\n",
     "  \n",
     "# printing modified list \n",
-    "print (features) \n",
-    "print (len(features))"
+    "#print (features) \n",
+    "# print (len(features))\n",
+    "\n",
+    "# print(x_train)\n",
+    "\n",
+    "# takes of the high level features?\n",
+    "# x_temp = np.delete(x_train, 0, 1) \n",
+    "# x_temp = np.delete(x_temp, 0, 1) \n",
+    "# x_temp = np.delete(x_temp, 0, 1) \n",
+    "\n",
+    "# print(selected_feats)\n",
+    "\n",
+    "# x_max = x_train.max(axis=0)\n",
+    "# x_min = np.amin(x_train, axis=0)\n",
+    "\n",
+    "# print(x_train[:,3])\n",
+    "# print(x_train[0, 5])\n",
+    "\n",
+    "# print(x_max)\n",
+    "# print(x_min)\n",
+    "\n",
+    "s = np.random.normal(0.5, 0.15, 69)\n",
+    "print(s)"
    ]
   },
   {
@@ -4602,7 +4651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
