--- a/Notebooks/Feature Mapping/APyori Sandbox.ipynb
+++ b/Notebooks/Feature Mapping/APyori Sandbox.ipynb
@@ -120,101 +120,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MARK 0\n",
-      "MARK 1\n",
-      "MARK 2\n",
-      "MARK 3\n",
-      "HERE\n",
-      "Iteration 1 / 200\n",
-      "Iteration 2 / 200\n",
-      "Iteration 3 / 200\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3325, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-4-d74f354466e2>\", line 23, in <module>\n",
-      "    verbose=True, interval=1\n",
-      "  File \"D:\\DLSU\\Research Work\\XLB\\XLB48\\Notebooks\\Feature Mapping\\xlb_hyperparamsearch.py\", line 78, in hyperparameter_search\n",
-      "    result, cur_model = cross_validation(num_folds,model,params,X,y)\n",
-      "  File \"D:\\DLSU\\Research Work\\XLB\\XLB48\\Notebooks\\Feature Mapping\\xlb_hyperparamsearch.py\", line 34, in cross_validation\n",
-      "    model.train(np.array(trainlist),np.array(labellist))\n",
-      "  File \"D:\\DLSU\\Research Work\\XLB\\XLB48\\Notebooks\\Feature Mapping\\custom_models.py\", line 273, in train\n",
-      "    ante_support=ruleset.support\n",
-      "  File \"D:\\DLSU\\Research Work\\XLB\\XLB48\\Notebooks\\Feature Mapping\\custom_models.py\", line 37, in __init__\n",
-      "    self.compute_confidence(data,labels)\n",
-      "  File \"D:\\DLSU\\Research Work\\XLB\\XLB48\\Notebooks\\Feature Mapping\\custom_models.py\", line 61, in compute_confidence\n",
-      "    for i,row in enumerate(data):\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2039, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'KeyboardInterrupt' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1101, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 319, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 353, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\inspect.py\", line 1502, in getinnerframes\n",
-      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\inspect.py\", line 1460, in getframeinfo\n",
-      "    filename = getsourcefile(frame) or getfile(frame)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\inspect.py\", line 696, in getsourcefile\n",
-      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\inspect.py\", line 733, in getmodule\n",
-      "    if ismodule(module) and hasattr(module, '__file__'):\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\py\\_vendored_packages\\apipkg.py\", line 195, in __getattribute__\n",
-      "    return getattr(getmod(), name)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\py\\_vendored_packages\\apipkg.py\", line 179, in getmod\n",
-      "    x = importobj(modpath, None)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\py\\_vendored_packages\\apipkg.py\", line 69, in importobj\n",
-      "    module = __import__(modpath, None, None, ['__doc__'])\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pytest.py\", line 36, in <module>\n",
-      "    from _pytest.recwarn import deprecated_call\n",
-      "  File \"<frozen importlib._bootstrap>\", line 983, in _find_and_load\n",
-      "  File \"<frozen importlib._bootstrap>\", line 963, in _find_and_load_unlocked\n",
-      "  File \"<frozen importlib._bootstrap>\", line 906, in _find_spec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 1280, in find_spec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 1252, in _get_spec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 1364, in find_spec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 81, in _path_stat\n",
-      "KeyboardInterrupt\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m"
+      "Iteration 5 / 200\n",
+      "Best Result: 0.43\n",
+      "Iteration 10 / 200\n",
+      "Best Result: 0.43\n",
+      "Iteration 15 / 200\n",
+      "Best Result: 0.43\n",
+      "Iteration 20 / 200\n",
+      "Best Result: 0.43\n",
+      "Iteration 25 / 200\n",
+      "Best Result: 0.43\n",
+      "Iteration 30 / 200\n",
+      "Best Result: 0.43\n",
+      "Iteration 35 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 40 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 45 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 50 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 55 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 60 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 65 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 70 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 75 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 80 / 200\n",
+      "Best Result: 0.44\n",
+      "Iteration 85 / 200\n",
+      "Best Result: 0.44\n"
      ]
     }
    ],
