Fixed Small Error in Hyperparam Search

--- a/Notebooks/Feature Mapping/APyori Sandbox.ipynb
+++ b/Notebooks/Feature Mapping/APyori Sandbox.ipynb
@@ -24,6 +24,7 @@
     "from XLB import *\n",
     "import xlb_hyperparamsearch as xlbh\n",
     "from apyori import apriori\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -130,37 +131,7 @@
       "Iteration 5 / 200\n",
       "Best Result: 0.43\n",
       "Iteration 10 / 200\n",
-      "Best Result: 0.43\n",
-      "Iteration 15 / 200\n",
-      "Best Result: 0.43\n",
-      "Iteration 20 / 200\n",
-      "Best Result: 0.43\n",
-      "Iteration 25 / 200\n",
-      "Best Result: 0.43\n",
-      "Iteration 30 / 200\n",
-      "Best Result: 0.43\n",
-      "Iteration 35 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 40 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 45 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 50 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 55 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 60 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 65 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 70 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 75 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 80 / 200\n",
-      "Best Result: 0.44\n",
-      "Iteration 85 / 200\n",
-      "Best Result: 0.44\n"
+      "Best Result: 0.43\n"
      ]
     }
    ],
@@ -192,7 +163,7 @@
     "    print(\"MARK 3\")\n",
     "hyperparams, result, model = xlbh.hyperparameter_search(\n",
     "    num_folds=num_folds,model=model,parameters=parameters,X=x_train,y=y_train,\\\n",
-    "    verbose=True, interval=5\n",
+    "    verbose=True, interval=5, random_state=112263\n",
     ")\n",
     "if verbose:\n",
     "    print(\"MARK 4\")"
@@ -214,9 +185,10 @@
     "    probas = model.predict_proba(x_val)\n",
     "    labels = model.predict(x_val)\n",
     "    acc = model.score(x_val,y_val - 1)\n",
-    "    print(probas)\n",
-    "    print(labels)\n",
-    "    print(acc)"
+    "#     print(probas)\n",
+    "#     print(labels)\n",
+    "    print(\"Accuracy: {:.2f}\".format(acc))\n",
+    "    print(\"F1-score: {:.2f}\".format(labels,y_val - 1))"
    ]
   },
   {
