Fixed some errors

--- a/Notebooks/Feature Mapping/APyori Sandbox.ipynb
+++ b/Notebooks/Feature Mapping/APyori Sandbox.ipynb
@@ -128,10 +128,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 5 / 200\n",
-      "Best Result: 0.43\n",
-      "Iteration 10 / 200\n",
-      "Best Result: 0.43\n"
+      "Iteration 5 / 300\n",
+      "Best Result: 0.01\n",
+      "Iteration 10 / 300\n",
+      "Best Result: 0.03\n",
+      "Iteration 15 / 300\n",
+      "Best Result: 0.03\n",
+      "Iteration 20 / 300\n",
+      "Best Result: 0.03\n",
+      "Iteration 25 / 300\n",
+      "Best Result: 0.03\n"
      ]
     }
    ],
@@ -153,17 +159,21 @@
     "    \"thresh_std\" : 0.15,\n",
     "    \"min_support_lo\" : 0.16,\n",
     "    \"min_support_hi\" : 0.22,\n",
-    "    \"min_confidence_lo\" : 0.036,\n",
-    "    \"min_confidence_hi\" : 0.739,\n",
+    "#     \"min_confidence_lo\" : 0.036,\n",
+    "#     \"min_confidence_hi\" : 0.539,\n",
+    "    \"min_confidence_lo\" : 0.0,\n",
+    "    \"min_confidence_hi\" : 0.0,\n",
     "    \"col_names\" : features[:-1],\n",
     "    \"label_names\" : emotions,\n",
-    "    \"label_support\" : label_supp\n",
+    "    \"label_support\" : label_supp,\n",
+    "    \"min_rules_lo\" : 6,\n",
+    "    \"min_rules_hi\" : 30\n",
     "}\n",
     "if verbose:\n",
     "    print(\"MARK 3\")\n",
     "hyperparams, result, model = xlbh.hyperparameter_search(\n",
     "    num_folds=num_folds,model=model,parameters=parameters,X=x_train,y=y_train,\\\n",
-    "    verbose=True, interval=5, random_state=112263\n",
+    "    verbose=True, num_iter=300,interval=5, random_state=69\n",
     ")\n",
     "if verbose:\n",
     "    print(\"MARK 4\")"
@@ -185,10 +195,21 @@
     "    probas = model.predict_proba(x_val)\n",
     "    labels = model.predict(x_val)\n",
     "    acc = model.score(x_val,y_val - 1)\n",
-    "#     print(probas)\n",
-    "#     print(labels)\n",
+    "    print(probas)\n",
+    "    print(labels)\n",
     "    print(\"Accuracy: {:.2f}\".format(acc))\n",
-    "    print(\"F1-score: {:.2f}\".format(labels,y_val - 1))"
+    "    print(labels,y_val - 1)\n",
+    "    print(\"F1-score: {}\".format(f1_score(labels,list(map(int,y_val - 1)),average=None)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k,v in hyperparams.items():\n",
+    "    print(\"{} -> {}\".format(k,v))"
    ]
   },
   {
