Converted Rule Extractor to OVR

--- a/Notebooks/Feature Mapping/APyori Sandbox.ipynb
+++ b/Notebooks/Feature Mapping/APyori Sandbox.ipynb
@@ -121,92 +121,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 5 / 300\n",
-      "Best Result: 0.01\n",
-      "Iteration 10 / 300\n",
-      "Best Result: 0.03\n",
-      "Iteration 15 / 300\n",
-      "Best Result: 0.03\n",
-      "Iteration 20 / 300\n",
-      "Best Result: 0.03\n",
-      "Iteration 25 / 300\n",
-      "Best Result: 0.03\n"
+      "Iteration 5 / 10\n",
+      "Best Result: 0.05\n",
+      "Iteration 10 / 10\n",
+      "Best Result: 0.06\n",
+      "Average Interestingness: 0.06\n",
+      "Stats for IsCalm\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0] [ True  True  True  True False False False False False False False False\n",
+      " False False False False False False False False False]\n",
+      "Accuracy: 0.81\n",
+      "F1-score: 0.0\n",
+      "Iteration 5 / 10\n",
+      "Best Result: 0.09\n",
+      "Iteration 10 / 10\n",
+      "Best Result: 0.10\n",
+      "Average Interestingness: 0.11\n",
+      "Stats for IsCheerful\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0] [False False False False  True  True  True False False False False False\n",
+      " False False False False False False False False False]\n",
+      "Accuracy: 0.86\n",
+      "F1-score: 0.0\n",
+      "Iteration 5 / 10\n",
+      "Best Result: 0.09\n",
+      "Iteration 10 / 10\n",
+      "Best Result: 0.09\n",
+      "Average Interestingness: 0.11\n",
+      "Stats for IsBravery\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0] [False False False False False False False  True  True  True  True False\n",
+      " False False False False False False False False False]\n",
+      "Accuracy: 0.81\n",
+      "F1-score: 0.0\n",
+      "Iteration 5 / 10\n",
+      "Best Result: 0.07\n",
+      "Iteration 10 / 10\n",
+      "Best Result: 0.07\n",
+      "Average Interestingness: 0.07\n",
+      "Stats for IsFearful\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0] [False False False False False False False False False False False  True\n",
+      "  True  True  True False False False False False False]\n",
+      "Accuracy: 0.81\n",
+      "F1-score: 0.0\n",
+      "Iteration 5 / 10\n",
+      "Best Result: 0.13\n",
+      "Iteration 10 / 10\n",
+      "Best Result: 0.14\n",
+      "Average Interestingness: 0.14\n",
+      "Stats for IsLove\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0] [False False False False False False False False False False False False\n",
+      " False False False  True  True  True False False False]\n",
+      "Accuracy: 0.86\n",
+      "F1-score: 0.0\n",
+      "Iteration 5 / 10\n",
+      "Best Result: 0.11\n",
+      "Iteration 10 / 10\n",
+      "Best Result: 0.12\n",
+      "Average Interestingness: 0.11\n",
+      "Stats for IsSadness\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0] [False False False False False False False False False False False False\n",
+      " False False False False False False  True  True  True]\n",
+      "Accuracy: 0.86\n",
+      "F1-score: 0.0\n"
      ]
     }
    ],
    "source": [
-    "verbose = False\n",
-    "if verbose:\n",
-    "    print(\"MARK 0\")\n",
-    "num_folds = 5\n",
-    "model = cm.APyoriAdapter(params={})\n",
-    "if verbose:\n",
-    "    print(\"MARK 1\")\n",
     "emotions = [\"IsCalm\", \"IsCheerful\", \"IsBravery\", \"IsFearful\", \"IsLove\", \"IsSadness\"]\n",
     "label_supp = [0.3117,  0.1372, 0.1397,  0.2469, 0.0673, 0.0973]\n",
-    "if verbose:\n",
-    "    print(\"MARK 2\")\n",
-    "parameters = {\n",
-    "    \"num_features\" : 69,\n",
-    "    \"thresh_mean\" : 0.5,\n",
-    "    \"thresh_std\" : 0.15,\n",
-    "    \"min_support_lo\" : 0.16,\n",
-    "    \"min_support_hi\" : 0.22,\n",
-    "#     \"min_confidence_lo\" : 0.036,\n",
-    "#     \"min_confidence_hi\" : 0.539,\n",
-    "    \"min_confidence_lo\" : 0.0,\n",
-    "    \"min_confidence_hi\" : 0.0,\n",
-    "    \"col_names\" : features[:-1],\n",
-    "    \"label_names\" : emotions,\n",
-    "    \"label_support\" : label_supp,\n",
-    "    \"min_rules_lo\" : 6,\n",
-    "    \"min_rules_hi\" : 30\n",
-    "}\n",
-    "if verbose:\n",
-    "    print(\"MARK 3\")\n",
-    "hyperparams, result, model = xlbh.hyperparameter_search(\n",
-    "    num_folds=num_folds,model=model,parameters=parameters,X=x_train,y=y_train,\\\n",
-    "    verbose=True, num_iter=300,interval=5, random_state=69\n",
-    ")\n",
-    "if verbose:\n",
-    "    print(\"MARK 4\")"
+    "    \n",
+    "for theme in range(1,7):\n",
+    "    verbose = False\n",
+    "    num_folds = 5\n",
+    "    model = cm.APyoriAdapter(params={})\n",
+    "    targ_supp = [1 - label_supp[theme - 1],label_supp[theme - 1]]\n",
+    "    parameters = {\n",
+    "        \"num_features\" : 69,\n",
+    "        \"thresh_mean\" : 0.5,\n",
+    "        \"thresh_std\" : 0.15,\n",
+    "        \"min_support_lo\" : 0.16,\n",
+    "        \"min_support_hi\" : 0.22,\n",
+    "#         \"min_confidence_lo\" : 0.036,\n",
+    "#         \"min_confidence_hi\" : 0.539,\n",
+    "        \"min_confidence_lo\" : 0.00,\n",
+    "        \"min_confidence_hi\" : 0.00,\n",
+    "        \"col_names\" : features[:-1],\n",
+    "        \"label_names\" : [\"IsNot{}\".format(emotions[theme-1][2:]),emotions[theme - 1]],\n",
+    "        \"label_support\" : targ_supp,\n",
+    "        \"min_rules_lo\" : 5,\n",
+    "        \"min_rules_hi\" : 20\n",
+    "    }\n",
+    "    y_targ = np.reshape(np.array([y_smote == theme]),(750,))\n",
+    "    hyperparams, result, model = xlbh.hyperparameter_search(\n",
+    "        num_folds=num_folds,model=model,parameters=parameters,X=x_smote,\\\n",
+    "        y=y_targ,\\\n",
+    "        verbose=True, num_iter=200,interval=10,random_state=69420\n",
+    "    )\n",
+    "    \n",
+    "    with open(\"rules{}.txt\".format(emotions[theme - 1]),\"w\") as fOut:\n",
+    "        ruleset = model.ruleset\n",
+    "        fOut.write(\"{}\\n\".format(\"\\n\\n\".join([x.__str__() for x in ruleset])))\n",
+    "        print(\"Average Interestingness: {:.2f}\".format(model.evaluate()))\n",
+    "        probas = model.predict_proba(x_val)\n",
+    "        labels = model.predict(x_val)\n",
+    "        acc = model.score(x_val,y_val == theme)\n",
+    "        print(\"Stats for {}\".format(emotions[theme - 1]))\n",
+    "#         print(probas)\n",
+    "#         print(labels,y_val == theme)\n",
+    "        print(\"Accuracy: {:.2f}\".format(acc))\n",
+    "        print(\"F1-score: {}\".format(f1_score(\n",
+    "            labels,list(map(int,y_val == theme))\n",
+    "        )))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "with open(\"rules.txt\",\"w\") as fOut:\n",
-    "    np.random.seed(69420)\n",
-    "    ruleset = model.ruleset\n",
-    "    fOut.write(\"{}\\n\".format(\"\\n\\n\".join([x.__str__() for x in ruleset])))\n",
-    "    print(\"Average Interestingness: {:.2f}\".format(model.evaluate()))\n",
-    "    probas = model.predict_proba(x_val)\n",
-    "    labels = model.predict(x_val)\n",
-    "    acc = model.score(x_val,y_val - 1)\n",
-    "    print(probas)\n",
-    "    print(labels)\n",
-    "    print(\"Accuracy: {:.2f}\".format(acc))\n",
-    "    print(labels,y_val - 1)\n",
-    "    print(\"F1-score: {}\".format(f1_score(labels,list(map(int,y_val - 1)),average=None)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thresholds -> [0.47451572 0.40118617 0.3669801  0.49732092 0.37064738 0.50284855\n",
+      " 0.26639129 0.36131771 0.6211239  0.45110467 0.53024349 0.31763788\n",
+      " 0.32978629 0.45909122 0.6227482  0.1941278  0.56800976 0.318423\n",
+      " 0.39597653 0.54094139 0.41534273 0.61843739 0.71562743 0.45629711\n",
+      " 0.46138987 0.22634265 0.52701838 0.5872876  0.42918885 0.5904915\n",
+      " 0.71482511 0.40857648 0.46642116 0.44597248 0.59242758 0.54962625\n",
+      " 0.2173277  0.5717978  0.4793687  0.37434666 0.70458894 0.64757908\n",
+      " 0.57584678 0.19112088 0.59150198 0.54743306 0.47402216 0.52099661\n",
+      " 0.52416071 0.5529033  0.49319975 0.51837527 0.73512309 0.39287433\n",
+      " 0.47129881 0.61111037 0.62961304 0.52383199 0.77117974 0.21046687\n",
+      " 0.43351816 0.36758352 0.6450635  0.4305435  0.52657623 0.64916476\n",
+      " 0.452944   0.36659421 0.44683703]\n",
+      "min_support -> 0.2022197075052909\n",
+      "min_confidence -> 0.0\n",
+      "col_names -> ['Tempo', 'Arousal', 'IsMajor', 'IsMinor', 'IsDissonant', 'Derivative of Root Mean Square Overall Standard Deviation', 'Derivative of Running Mean of Root Mean Square Overall Standard Deviation', 'Derivative of Running Mean of Spectral Flux Overall Standard Deviation', 'Derivative of Running Mean of Spectral Variability Overall Standard Deviation', 'Derivative of Spectral Flux Overall Standard Deviation', 'Derivative of Spectral Variability Overall Standard Deviation', 'Derivative of Standard Deviation of Root Mean Square Overall Standard Deviation', 'Derivative of Standard Deviation of Spectral Flux Overall Standard Deviation', 'Derivative of Standard Deviation of Spectral Variability Overall Standard Deviation', 'Fraction Of Low Energy Windows Overall Average', 'Magnitude Spectrum Overall Average', 'Magnitude Spectrum Overall Standard Deviation', 'Power Spectrum Overall Average', 'Power Spectrum Overall Standard Deviation', 'Running Mean of Compactness Overall Standard Deviation', 'Running Mean of Fraction Of Low Energy Windows Overall Average', 'Running Mean of Fraction Of Low Energy Windows Overall Standard Deviation', 'Running Mean of Root Mean Square Overall Standard Deviation', 'Running Mean of Spectral Centroid Overall Average', 'Running Mean of Spectral Flux Overall Standard Deviation', 'Running Mean of Spectral Rolloff Point Overall Average', 'Running Mean of Spectral Rolloff Point Overall Standard Deviation', 'Running Mean of Spectral Variability Overall Standard Deviation', 'Spectral Centroid Overall Average', 'Spectral Centroid Overall Standard Deviation', 'Spectral Rolloff Point Overall Average', 'Spectral Rolloff Point Overall Standard Deviation', 'Standard Deviation of Compactness Overall Standard Deviation', 'Standard Deviation of Fraction Of Low Energy Windows Overall Average', 'Standard Deviation of Fraction Of Low Energy Windows Overall Standard Deviation', 'Standard Deviation of Root Mean Square Overall Standard Deviation', 'Standard Deviation of Spectral Centroid Overall Average', 'Standard Deviation of Spectral Flux Overall Standard Deviation', 'Standard Deviation of Spectral Rolloff Point Overall Average', 'Standard Deviation of Spectral Rolloff Point Overall Standard Deviation', 'Standard Deviation of Spectral Variability Overall Standard Deviation', 'Beat Histogram Overall Standard Deviation', 'Beat Sum Overall Standard Deviation', 'ConstantQ Overall Standard Deviation', 'Derivative of Beat Sum Overall Standard Deviation', 'Derivative of LPC Overall Standard Deviation', 'Derivative of Method of Moments Overall Average', 'Derivative of Method of Moments Overall Standard Deviation', 'Derivative of MFCC Overall Average', 'Derivative of MFCC Overall Standard Deviation', 'Derivative of Partial Based Spectral Centroid Overall Average', 'Derivative of Partial Based Spectral Centroid Overall Standard Deviation', 'Derivative of Partial Based Spectral Flux Overall Average', 'Derivative of Partial Based Spectral Flux Overall Standard Deviation', 'Derivative of Peak Based Spectral Smoothness Overall Average', 'Derivative of Peak Based Spectral Smoothness Overall Standard Deviation', 'Derivative of Relative Difference Function Overall Average', 'Derivative of Relative Difference Function Overall Standard Deviation', 'Derivative of Running Mean of Beat Sum Overall Average', 'Derivative of Running Mean of Beat Sum Overall Standard Deviation', 'Derivative of Running Mean of LPC Overall Average', 'Derivative of Running Mean of LPC Overall Standard Deviation', 'Derivative of Running Mean of Method of Moments Overall Average', 'Derivative of Running Mean of Method of Moments Overall Standard Deviation', 'Derivative of Running Mean of MFCC Overall Average', 'Derivative of Running Mean of MFCC Overall Standard Deviation', 'Derivative of Running Mean of Partial Based Spectral Centroid Overall Standard Deviation', 'Derivative of Running Mean of Partial Based Spectral Flux Overall Standard Deviation', 'Derivative of Running Mean of Peak Based Spectral Smoothness Overall Average']\n",
+      "label_names -> ['IsNot{}', 'Sadness', 'IsSadness']\n",
+      "label_support -> [0.9027000000000001, 0.0973]\n",
+      "min_rules -> 6\n"
+     ]
+    }
+   ],
    "source": [
     "for k,v in hyperparams.items():\n",
     "    print(\"{} -> {}\".format(k,v))"
