Modified Representation of Transactions

--- a/Notebooks/Feature Mapping/APyori Sandbox.ipynb
+++ b/Notebooks/Feature Mapping/APyori Sandbox.ipynb
@@ -131,7 +131,15 @@
       "Result = 0.9011176446401608\n",
       "Result = 0.9024301316253851\n",
       "Result = 0.9024301316253851\n",
-      "Result = 0.9031503239382133\n"
+      "Result = 0.9031503239382133\n",
+      "Result = 0.9015840283030736\n",
+      "Result = 0.9035728240054514\n",
+      "Result = 0.9024301316253851\n",
+      "Result = 0.9020076315581466\n",
+      "Result = 0.9035728240054514\n",
+      "Iteration 10 / 200\n",
+      "Best Result: 0.90\n",
+      "Result = 0.9020076315581466\n"
      ]
     }
    ],
